// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imports defined via compilerOptions.paths import 1`] = `
import TabItem from '@theme/TabItem'
import Tabs from '@theme/Tabs'

    <Tabs
      groupId="language"
      defaultValue="ts"
      values={[
        { label: 'TypeScript', value: 'ts', },
        { label: 'JavaScript', value: 'js', },
      ]}
    >        
        <TabItem value="ts">
\`\`\`ts
// file: file1.ts
import { someNumber } from '@transpileCodeblocksTest';
const n: number = someNumber;


// file: file2.ts
import { someNumber } from '@test/transpileCodeblocks.test';
const n: number = someNumber;
\`\`\`

        </TabItem>
        <TabItem value="js">
\`\`\`js
// file: file1.ts
import { someNumber } from '@transpileCodeblocksTest';
const n = someNumber;


// file: file2.ts
import { someNumber } from '@test/transpileCodeblocks.test';
const n = someNumber;
\`\`\`

        </TabItem>
    </Tabs>
`;

exports[`supports hyphens & periods in filenames 1`] = `
import TabItem from '@theme/TabItem'
import Tabs from '@theme/Tabs'

    <Tabs
      groupId="language"
      defaultValue="ts"
      values={[
        { label: 'TypeScript', value: 'ts', },
        { label: 'JavaScript', value: 'js', },
      ]}
    >        
        <TabItem value="ts">
\`\`\`ts
import { testFn } from './file-one.stuff';

console.log(testFn('foo'));
\`\`\`

        </TabItem>
        <TabItem value="js">
\`\`\`js
import { testFn } from './file-one.stuff';

console.log(testFn('foo'));
\`\`\`

        </TabItem>
    </Tabs>
`;

exports[`transpiles codeblocks 1`] = `
import TabItem from '@theme/TabItem'
import Tabs from '@theme/Tabs'

    <Tabs
      groupId="language"
      defaultValue="ts"
      values={[
        { label: 'TypeScript', value: 'ts', },
        { label: 'JavaScript', value: 'js', },
      ]}
    >        
        <TabItem value="ts">
\`\`\`ts
function testFn(arg1: string) {
  return arg1;
}
\`\`\`

        </TabItem>
        <TabItem value="js">
\`\`\`js
function testFn(arg1) {
  return arg1;
}
\`\`\`

        </TabItem>
    </Tabs>
`;

exports[`transpiles codeblocks with multiple file definitions 1`] = `
import TabItem from '@theme/TabItem'
import Tabs from '@theme/Tabs'

    <Tabs
      groupId="language"
      defaultValue="ts"
      values={[
        { label: 'TypeScript', value: 'ts', },
        { label: 'JavaScript', value: 'js', },
      ]}
    >        
        <TabItem value="ts">
\`\`\`ts
// file: file1.ts
export function testFn(arg1: string) {
  return arg1;
}


// file: file2.ts
import { testFn } from './file1';

console.log(testFn('foo'));
\`\`\`

        </TabItem>
        <TabItem value="js">
\`\`\`js
// file: file1.ts
export function testFn(arg1) {
  return arg1;
}


// file: file2.ts
import { testFn } from './file1';

console.log(testFn('foo'));
\`\`\`

        </TabItem>
    </Tabs>
`;
